[package]
name = "rtp"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"

[dependencies]
trackable = "0.1"
handy_async = "0.2"
rust-crypto = "0.2"
num = "0.1"
fixedbitset = "0.1"

openssl = { version = "0.10", optional = true }
tokio = { version = "0.1", optional = true }

[dev-dependencies]
clap = "2"
fibers = "0.1"
futures = "0.1"
