[package]
name = "rtp"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"

[features]
default = []
rfc5764-openssl = ["openssl", "tokio-openssl", "tokio-util/compat"]

[dependencies]
aes-ctr = "0.6.0"
async-trait = "0.1"
fixedbitset = "0.1"
futures = "0.3"
handy_async = "0.2"
hmac = "0.10.1"
num = "0.1"
sha-1 = "0.9.2"
trackable = "0.1"

openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.4", optional = true }
tokio-util = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
clap = "2"
fibers = "0.1"
futures01 = { package = "futures", version = "0.1" }
